# icoo_lang_r

./: Cargo.toml  README.en.md  README.md
.cargo/: config.toml
docs/plans/: 2026-05-21-icoo-language-design.md  2026-05-22-icoo-bytecode-vm-design.md  2026-05-22-icoo-bytes-buffer-design.md  2026-05-22-icoo-core-next-features-plan.md  2026-05-22-icoo-current-language-development-plan.md  2026-05-22-icoo-next-stage-parallel-plan.md  2026-05-26-advanced-http-client-parallel-plan.md  2026-05-26-http2-alpn-implementation-design.md  2026-05-26-https-tls-native-design.md  2026-05-26-pi-agent-language-gap-analysis.md  2026-05-26-production-filesystem-native-plan.md  2026-05-26-production-native-libs-parallel-plan.md  2026-05-26-production-runtime-hardening.md  2026-05-26-runtime-size-limits.md  icoo_agent_pi_analysis.md  icoo_agent_pi_development.md
editors/vscode-icoo/: .vscodeignore  CHANGELOG.md  (+5 more)
examples/: coroutines.icoo  demo.icoo
src/: builder.rs  error.rs  lib.rs  main.rs  packager.rs  project.rs  resolver.rs  typechecker.rs
tests/: async_event_loop.rs  backend_equivalence.rs  bytes.rs  cli.rs  error_handling.rs  execution_timeout.rs  http_client_bytes.rs  http_client_headers.rs  http_client_https.rs  http_client_proxy.rs  http_client_redirects.rs  http_runtime_config.rs  integer_overflow.rs  io_fs_production.rs  language.rs  log_module.rs  logging_runtime.rs  native_modules_matrix.rs  net_protocol_modules.rs  path_module.rs  permissions_matrix.rs  process_module.rs  stack_depth.rs  stack_trace.rs  web_ino_perf.rs  web_ino_response_headers.rs  web_ino_routes.rs
(+76 files in other folders)
