[package]
name = "icoo_lang_r"
version = "0.1.0"
edition = "2021"

[lib]
name = "icoo_lang_r"
path = "src/lib.rs"

[[bin]]
name = "icoo"
path = "src/main.rs"

[dependencies]
serde_json = "1"
serde_yml = "0.0.12"
rustls = { version = "0.23", default-features = true, features = ["std"] }
rustls-native-certs = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
toml = "0.8"

[dev-dependencies]
rcgen = "0.14"
